<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="25dp"
    android:paddingTop="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include

        android:id="@+id/app_bar"
        layout="@layout/constant_app_bar"/>




    <TextView
        android:id="@+id/page_desc"
        android:text="@string/label_contact_us"
        style="@style/MainHeading"

        android:layout_width="match_parent"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="normal"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
       app:layout_constraintTop_toBottomOf="@+id/app_bar"
        />
    <TextView
        android:id="@+id/page_desc2"
        android:text="@string/label_contact_us2"
        style="@style/MainHeading"
        android:layout_width="match_parent"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="normal"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/page_desc"
        />

    <LinearLayout
        android:id="@+id/contact_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/page_desc2"

        >
        <EditText
            android:id="@+id/et_conatct_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/editText"
            android:hint="@string/et_title"
            />

    </LinearLayout>


    <EditText
        android:id="@+id/et_conatct_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="text"
        style="@style/editTextBox"
        android:hint="@string/et_message"
        android:gravity="start"
        app:layout_constraintBottom_toTopOf="@id/btn_send_message"
        app:layout_constraintTop_toBottomOf="@id/contact_form"
        android:layout_marginBottom="15dp"



        />

    <TextView
        android:id="@+id/btn_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_orange_round_button"
        android:text="@string/send_message"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="13dp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"

        />




        </androidx.constraintlayout.widget.ConstraintLayout>

