<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ic_risk"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_risk"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:id="@+id/ll_heading_pn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ic_risk"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/phonenumber_label"
            style="@style/MainHeading"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/verifynumber_label2"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            />
    </LinearLayout>



    <TextView
        android:id="@+id/tv_resend_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_label"
        app:layout_constraintBottom_toTopOf="@+id/btn_verify_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
       android:layout_marginBottom="40dp"
        />


    <TextView
        android:id="@+id/btn_verify_phone_number"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_orange_round_button"
        android:text="@string/verifynumber_label"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="13dp"
        android:textAlignment="center"
        />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/otp_pinview"
        app:layout_constraintBottom_toTopOf="@+id/tv_resend_otp"
        app:layout_constraintTop_toTopOf="@+id/ll_heading_pn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:pinWidth="40dp"
        app:pinHeight="40dp"
        app:pinLength="4"
        app:cursorVisible="false"
        android:focusable="false"
        app:forceKeyboard="false"
        app:inputType="text"
        app:textSize="18dp"
        app:password="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>