<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ic_risk"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_risk"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        />



      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintTop_toBottomOf="@+id/ic_risk"
          >
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAlignment="center"
              android:text="@string/phonenumber_label"
              style="@style/MainHeading"
              android:textColor="@color/black"
              android:layout_marginTop="30dp"
              />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/phonenumber_label2"
               android:textSize="18sp"
               android:layout_marginTop="18dp"
               />

           <EditText
               android:id="@+id/etmobilenumber"
               android:drawableLeft="@drawable/ic_baseline_phone_android_24"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="numberDecimal"

               android:textColorHint="@color/black"
               android:textColor="@color/black"
               android:textSize="18sp"
               android:padding="15dp"
               android:maxLength="13"
               android:background="@drawable/et_border_round"
               android:layout_marginTop="30dp"
               android:textCursorDrawable="@drawable/cursor_drawable"
               android:text="+91"


               />
      </LinearLayout>






    <TextView
        android:id="@+id/btn_next_process2"
        android:layout_marginBottom="15dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_orange_round_button"
        android:text="@string/next_label"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="13dp"
        android:textAlignment="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>