<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ic_risk"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_risk"
            android:layout_marginTop="50dp"
            />


        <TextView
            android:text="Profile"
            style="@style/MainHeading"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            />



        <EditText
            android:id="@+id/et_prof_username"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editText"
            android:hint="@string/et_label_username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_prof_buisnessName"
            style="@style/editText"
            android:hint="@string/et_label_buisness_name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/et_border_gray"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="15dp"
            >
            <Spinner
                android:id="@+id/spinner_buisness_category"
                style="@style/spinner"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_buisness_category"
                android:hint="Buisness Category"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_drop_down"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/et_border_gray"
            android:layout_marginTop="15sp"
            android:paddingHorizontal="15dp"
            >
            <Spinner
                android:id="@+id/spinner_buisness_type"
                style="@style/spinner"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_buisness_type"
                android:hint="Buisness Type"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_drop_down"
                />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_prof_gstNumber"
            android:maxLength="15"
            style="@style/editText"
            android:hint="@string/et_label_gst"
            />

        <TextView
            android:id="@+id/pickgallry"
            android:text="+ Upload certificate"
            style="@style/SubHeading"
            android:layout_width="match_parent"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/app_green"
            android:fontFamily="@font/poppins_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/et_border_gray"
            android:layout_marginTop="15sp"
            android:paddingHorizontal="15dp"
            >
            <Spinner
                android:id="@+id/spinner_countyr"
                style="@style/spinner"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_spinner_country2"
                android:hint="Country"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_drop_down"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/et_border_gray"
            android:layout_marginTop="15sp"
            android:paddingHorizontal="15dp"
            >
            <Spinner
                android:id="@+id/spinner_state"
                style="@style/spinner"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_spinner_state"
                android:hint="State"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_drop_down"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/et_border_gray"
            android:layout_marginTop="15sp"
            android:paddingHorizontal="15dp"
            >
            <Spinner
                android:id="@+id/spinner_city"
                style="@style/spinner"
                android:visibility="gone"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_spinner_city"
                android:hint="City"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_drop_down"
                />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_prof_mobileNo"
             style="@style/editText"
            android:hint="@string/et_moble_label"
            android:focusable="false"
            android:editable="false"
            android:textColor="@color/light_gray"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editText"
            android:visibility="visible"
            android:hint="@string/et_label_add_mob_no"
            android:id="@+id/et_prof_mobileNo2"
            android:inputType="number"
            android:maxLength="10"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editText"
            android:visibility="gone"
            android:hint="@string/et_label_add_mob_no"
            android:id="@+id/et_prof_mobileNo3"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_prof_emaild"
            style="@style/editText"
            android:hint="@string/et_label_email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_prof_website"
            style="@style/editText"
            android:hint="@string/et_label_website" />


        <TextView
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_orange_round_button"
            android:text="Update"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="13dp"
            android:textAlignment="center"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20dp"

            />
    </LinearLayout>




</ScrollView>